# PKGBUILD_Manager

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  io.github.PkgbuildManage.json  io.github.john.PkgbuildManager.json  io.github.johnpetersa19.TemporalExplorer.json  meson.build  org.gnome.Example.json  pkgbuild-manager-git-v0.1.0.r0.9f9aa90-1-x86_64.pkg.tar.zst  pkgbuild-manager-git-v0.1.0.r3.e8615bf-1-x86_64.pkg.tar.zst  pkgbuild-manager-git-v0.1.0.r5.5a827f4-1-x86_64.pkg.tar.zst  pkgbuild-manager-git-v0.1.0.r6.3e419a5-1-x86_64.pkg.tar.zst  pkgbuild-manager.install
.github/workflows/: rust-arch.yml
PKGBUILD_Manager/: FETCH_HEAD  config  packed-refs
PKGBUILD_Manager/objects/pack/: pack-3759dcd5cebadcdfde8519276519eef4285a85f2.idx  pack-3759dcd5cebadcdfde8519276519eef4285a85f2.pack  pack-3759dcd5cebadcdfde8519276519eef4285a85f2.rev
PKGBUILD_Manager/refs/heads/: master
data/: meson.build  pkgbuild_manager_extension.py  regen-dolphin-desktop
data/applications/: io.github.PkgbuildManage.desktop  io.github.johnpetersa19.PkgbuildManager.desktop  pkgbuild-manager-settings.desktop
data/dolphin-servicemenu/: pkgbuild-manager.desktop
data/icons/: meson.build
data/nautilus-extension/: pkgbuild_manager.py  pkgbuild_manager_caja.py  pkgbuild_manager_nemo.py
data/nautilus-scripts/: 00_Full Workflow  01_Build  02_Install  02b_Build and Clean  03_Update Checksums  04_Update .SRCINFO  05_Namcap  05b_ShellCheck  06_Push AUR  07_Clean srcdir  07b_Clean Everything  08_Build Force  09_Build NoCheck  10_Build NoGPG  11_Fetch Sources  12_Install Force  13_Install RmDeps  14_Install NoCheck  15_Install NoGPG  16_Gen Checksums  17_Push AUR Tag  _i18n  _run_in_terminal
data/post-install/: register-shortcut  unregister-shortcut
data/ui/: add-action-dialog.blp  attachment-chooser.blp  branch-popover.blp  clean.blp  clone-progress.blp  error-alert.blp  progress-panel.blp  push.blp  release.blp  settings.blp  step-row.blp  unknown-repository.blp
pkg/pkgbuild-manager-git/: .BUILDINFO  .MTREE  .PKGINFO
pkg/pkgbuild-manager-git-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/pkgbuild-manager-git-debug/usr/src/debug/pkgbuild-manager-git/PKGBUILD_Manager/src/: config.rs
pkg/pkgbuild-manager-git-debug/usr/src/debug/pkgbuild-manager-git/PKGBUILD_Manager/src/actions/: clean.rs  namcap.rs
pkg/pkgbuild-manager-git/usr/share/locale/de/LC_MESSAGES/: pkgbuild_manager.mo
pkg/pkgbuild-manager-git/usr/share/locale/es/LC_MESSAGES/: pkgbuild_manager.mo
pkg/pkgbuild-manager-git/usr/share/locale/fr/LC_MESSAGES/: pkgbuild_manager.mo
pkg/pkgbuild-manager-git/usr/share/locale/it/LC_MESSAGES/: pkgbuild_manager.mo
pkg/pkgbuild-manager-git/usr/share/locale/pt_BR/LC_MESSAGES/: pkgbuild_manager.mo
pkg/pkgbuild-manager-git/usr/share/nautilus-scripts/: 00_Full Workflow  02_Install  03_Update Checksums  04_Update .SRCINFO  06_Push AUR  07_Clean srcdir  07b_Clean Everything  _run_in_terminal
po/: LINGUAS  POTFILES.in  bash_notify.pot.in  de.po  en_US.po  es.po  fr.po  it.po  ja.po  ko.po  meson.build  pkgbuild_manager.pot  pl.po  pt_BR.mo  pt_BR.po  pt_BRn_tmp.po  ru.po  tr.po  update-pot.sh  zh_CN.po
src/: Cargo.toml  application.rs  config.rs  config.rs.in  git_engine.rs  gui_blueprint.rs  host.rs  main.rs  meson.build  temporal-explorer.gresource.xml  window.blp  window.rs
src/actions/: aur_push.rs  build.rs  checksums.rs  clean.rs  install.rs  mod.rs  namcap.rs  shellcheck.rs  srcinfo.rs  validate.rs
src/aur_push_gui/: aur_dialog.rs  main.rs  release_dialog.rs  release_main.rs  win_state.rs  window.rs
src/clean_gui/: dialog.rs
src/gui/: main.rs
src/settings/: __main__.py  app.py  aur_dialog.py
src/settings_gui/: app.rs  config.rs  main.rs  win_state.rs
