[package]
name = "pkgbuild_manager"
version = "2.2.0"
edition = "2021"

[[bin]]
name = "pkgbuild_manager"
path = "src/main.rs"

[[bin]]
name = "pkgbuild-manager-aur-push"
path = "src/aur_push_gui/main.rs"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
anyhow = "1"
async-channel = "2"

[dependencies.gtk]
package = "gtk4"
version = "0.11"
features = ["v4_14"]

[dependencies.adw]
package = "libadwaita"
version = "0.9"
features = ["v1_6"]
