[package]
name = "pkgbuild_manager"
version = "2.2.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "pkgbuild_manager"
path = "src/main.rs"

[[bin]]
name = "pkgbuild-manager-gui"
path = "src/gui/main.rs"

[dependencies]
gettext-rs  = { version = "0.7", features = ["gettext-system"] }
anyhow      = "1"
async-channel = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dirs        = "6"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"

[dependencies.gtk]
package  = "gtk4"
version  = "0.9"
features = ["v4_14"]

[dependencies.adw]
package  = "libadwaita"
version  = "0.7"
features = ["v1_6"]
