[package]
name = "pkgbuild_manager"
version = "2.3.0"
edition = "2021"

[[bin]]
name = "pkgbuild_manager"
path = "main.rs"

[[bin]]
name = "pkgbuild-manager-gui"
path = "gui/main.rs"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
dirs       = "5"

[dependencies.gtk]
package  = "gtk4"
version  = "0.9"
features = ["v4_14"]

[dependencies.adw]
package  = "libadwaita"
version  = "0.7"
features = ["v1_6"]

[dependencies.async-channel]
version = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
